test/scc_test/stmt/semantic-errors/041.a
041.t:3:5: error: a continue statement may only be used within a loop